--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -2155,8 +2155,16 @@ div[role="heading"] button {
 	margin-top:.5em;
 	font-weight:400;
 	}
-#editowner .Accordion, #reviewattorney .Accordion {
+#editowner .panel-title span.glyphicon, #reviewattorney .panel-title span.glyphicon, #editowner .panel-title .Accordion-trigger, #reviewattorney .panel-title .Accordion-trigger {
+	float:left;
 	position:relative;
+	}
+#editowner .panel-title span.glyphicon, #reviewattorney .panel-title span.glyphicon {
+	top:4px;
+	cursor:pointer;
+	}
+#editowner .panel-title span.glyphicon-triangle-bottom, #reviewattorney .panel-title span.glyphicon-triangle-bottom {
+	display:none;
 	}
 .Accordion-trigger.link {
     color: #337ab7;
