--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -24,6 +24,9 @@ body {
 .ql-snow.ql-toolbar button:hover, .ql-snow .ql-toolbar button:hover, .ql-snow.ql-toolbar button:focus, .ql-snow .ql-toolbar button:focus, .ql-snow.ql-toolbar button.ql-active, .ql-snow .ql-toolbar button.ql-active, .ql-snow.ql-toolbar .ql-picker-label:hover, .ql-snow .ql-toolbar .ql-picker-label:hover, .ql-snow.ql-toolbar .ql-picker-label.ql-active, .ql-snow .ql-toolbar .ql-picker-label.ql-active, .ql-snow.ql-toolbar .ql-picker-item:hover, .ql-snow .ql-toolbar .ql-picker-item:hover, .ql-snow.ql-toolbar .ql-picker-item.ql-selected, .ql-snow .ql-toolbar .ql-picker-item.ql-selected {
 	color: #047db0!important;
 	}
+.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
+    border-color: transparent;
+}
 .ql-snow.ql-toolbar button:hover .ql-stroke, .ql-snow .ql-toolbar button:hover .ql-stroke, .ql-snow.ql-toolbar button:focus .ql-stroke, .ql-snow .ql-toolbar button:focus .ql-stroke, .ql-snow.ql-toolbar button.ql-active .ql-stroke, .ql-snow .ql-toolbar button.ql-active .ql-stroke, .ql-snow.ql-toolbar .ql-picker-label:hover .ql-stroke, .ql-snow .ql-toolbar .ql-picker-label:hover .ql-stroke, .ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-stroke, .ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-stroke, .ql-snow.ql-toolbar .ql-picker-item:hover .ql-stroke, .ql-snow .ql-toolbar .ql-picker-item:hover .ql-stroke, .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke, .ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-stroke, .ql-snow.ql-toolbar button:hover .ql-stroke-miter, .ql-snow .ql-toolbar button:hover .ql-stroke-miter, .ql-snow.ql-toolbar button:focus .ql-stroke-miter, .ql-snow .ql-toolbar button:focus .ql-stroke-miter, .ql-snow.ql-toolbar button.ql-active .ql-stroke-miter, .ql-snow .ql-toolbar button.ql-active .ql-stroke-miter, .ql-snow.ql-toolbar .ql-picker-label:hover .ql-stroke-miter, .ql-snow .ql-toolbar .ql-picker-label:hover .ql-stroke-miter, .ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-stroke-miter, .ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-stroke-miter, .ql-snow.ql-toolbar .ql-picker-item:hover .ql-stroke-miter, .ql-snow .ql-toolbar .ql-picker-item:hover .ql-stroke-miter, .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke-miter, .ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-stroke-miter {
 	/*stroke: #009CDE;*/
 	stroke: #047db0;
@@ -35,9 +38,16 @@ body {
 .ql-snow .ql-fill {
 	fill:#009CDE;
 	}
-	
 .ql-formats {
-	margin-right:2.1em!important;
+	margin-right:1.9em!important;
+	}
+.ql-snow .ql-picker:not(.ql-color-picker):not(.ql-icon-picker) svg {
+    margin-top: -20px;
+    right: -18px;
+    width: 40px;
+	}
+.ql-snow .ql-picker-label::before {
+	margin-left:4px;
 	}
 #editor, .ql-editor {
 	min-height:200px;
@@ -3337,7 +3347,7 @@ footer #megamenu ul {
 	.form-check-left {
     	padding-left: 0;
 		}
-	#declarationsignature .form-check, #optionalactionschecks .form-check {
+	#declarationsignature .form-check, #optionalactionschecks .form-check, #petitions1 .form-check {
     	padding-left: 0;
 		}
 	#gridview .form-check {
@@ -3352,13 +3362,15 @@ footer #megamenu ul {
 }
 @media (max-width: 991px) {
 	.ql-toolbar {
-		width:20%;
+		width:34%;
 		position:relative;
 		float:left;
 		border-right:0!important;
+		padding-top: 13px!important;
+    	padding-bottom: 3px!important;
 		}
 	#editor {
-		width:80%;
+		width:66%;
 		position:relative;
 		float:right;
 		height:420px;
@@ -3371,6 +3383,17 @@ footer #megamenu ul {
 		margin:0 auto!important;
 		display:block!important;
 		width: 58px;
+		}
+	.ql-snow .ql-picker-label::before {
+		width:102px;
+		margin-left:5px;
+		}
+	.ql-snow .ql-picker-label {
+		padding-left:0;
+		padding-right:0;
+		}
+	.ql-snow .ql-picker:not(.ql-color-picker):not(.ql-icon-picker) svg {
+		right: -14px;
 		}
 }
 @media (min-width:577px) and (max-width:767px) { 
