jQuery UI Update + 1
One CSS style change, all the rest, removal of the jQuery Smoothness CSS file on all pages <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">. See https://jqueryui.com/upgrade-guide/1.12/#new-default-theme

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -3347,7 +3347,7 @@ footer #megamenu ul {
 	.form-check-left {
     	padding-left: 0;
 		}
-	#declarationsignature .form-check, #optionalactionschecks .form-check, #petitions1 .form-check {
+	#declarationsignature .form-check, #optionalactionschecks .form-check, #petitions1 .form-check, #usaffiliation .form-check {
     	padding-left: 0;
 		}
 	#gridview .form-check {
